--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
         "axios": "^0.27.2",
         "next": "12.3.1",
         "react": "18.2.0",
-        "react-dom": "18.2.0",
-        "sass": "^1.55.0"
+        "react-dom": "18.2.0"
     },
     "devDependencies": {
         "@types/node": "18.7.23",
@@ -32,6 +31,7 @@
         "eslint-plugin-react": "^7.31.8",
         "eslint-plugin-react-hooks": "^4.6.0",
         "prettier": "^2.7.1",
+        "sass": "^1.55.0",
         "typescript": "4.8.4"
     }
 }
