--- a/package.json
+++ b/package.json
@@ -8,30 +8,33 @@
         "start": "next start",
         "lint": "eslint src/**/*.{js,jsx,ts,tsx,json}",
         "lint:fix": "eslint --fix 'src/**/*.{js,jsx,ts,tsx,json}'",
-        "format": "prettier --write ."
+        "format": "prettier --write .",
+        "test": "jest --watch"
     },
     "dependencies": {
         "axios": "^0.27.2",
         "next": "12.3.1",
         "react": "18.2.0",
-        "react-dom": "18.2.0"
+        "react-dom": "18.2.0",
+        "sass": "^1.55.0"
     },
     "devDependencies": {
-        "@types/node": "18.7.23",
-        "@types/react": "18.0.21",
-        "@types/react-dom": "18.0.6",
-        "@typescript-eslint/eslint-plugin": "^5.38.1",
-        "@typescript-eslint/parser": "^5.38.1",
-        "eslint": "^8.24.0",
-        "eslint-config-next": "12.3.1",
+        "@testing-library/jest-dom": "^5.16.5",
+        "@testing-library/react": "^13.4.0",
+        "@testing-library/user-event": "^14.4.3",
+        "@types/node": "^18.8.3",
+        "@types/react": "^18.0.21",
+        "@types/react-dom": "^18.0.6",
+        "@typescript-eslint/eslint-plugin": "^5.39.0",
+        "@typescript-eslint/parser": "^5.39.0",
+        "eslint-config-next": "^12.3.1",
         "eslint-config-prettier": "^8.5.0",
         "eslint-import-resolver-typescript": "^3.5.1",
         "eslint-plugin-import": "^2.26.0",
         "eslint-plugin-prettier": "^4.2.1",
-        "eslint-plugin-react": "^7.31.8",
+        "eslint-plugin-react": "^7.31.9",
         "eslint-plugin-react-hooks": "^4.6.0",
-        "prettier": "^2.7.1",
-        "sass": "^1.55.0",
+        "jest": "^29.1.2",
         "typescript": "4.8.4"
     }
 }
