--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "eslint-plugin-react": "^7.31.9",
         "eslint-plugin-react-hooks": "^4.6.0",
         "jest": "^29.1.2",
+        "jest-environment-jsdom": "^29.1.2",
         "typescript": "4.8.4"
     }
 }
