--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
-        "lint": "eslint src/**/*.{js,jsx,ts,tsx,json}",
+        "lint": "eslint --ext *.{js,ts,tsx}",
         "lint:fix": "eslint --fix 'src/**/*.{js,jsx,ts,tsx,json}'",
         "format": "prettier --write .",
         "test": "jest --watch"
@@ -34,6 +34,7 @@
         "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-react": "^7.31.9",
         "eslint-plugin-react-hooks": "^4.6.0",
+        "eslint-plugin-testing-library": "^5.7.2",
         "jest": "^29.1.2",
         "jest-environment-jsdom": "^29.1.2",
         "typescript": "4.8.4"
